--- a/public/css/style.css
+++ b/public/css/style.css
@@ -870,7 +870,7 @@ h4,
 .burger.light:before,
 .burger.light span,
 .burger.light:after {
-  background: #ffffff;
+  background: #001a33;
 }
 
 .burger:before,
@@ -2308,4 +2308,12 @@ index html css
 .twoButtons {
   display: flex;
   flex-direction: row;
+}
+.site-mobile-menu-body a {
+  color: black; /* Set link color to black */
+  text-decoration: none; /* Optional: Remove underline */
+}
+
+.site-mobile-menu-body a:hover {
+  color: gray; /* Optional: Add hover effect */
 }
