--- a/public/css/style.css
+++ b/public/css/style.css
@@ -614,7 +614,7 @@ h4,
   right: 0;
   z-index: 2000;
   padding-top: 20px;
-  background: #1573e8;
+  background: #1573e8 !important;
   height: calc(100vh);
   -webkit-transform: translateX(100%);
   -ms-transform: translateX(100%);
@@ -684,7 +684,7 @@ h4,
   padding: 5px 20px;
   display: block;
   position: relative;
-  color: #000000;
+  color: #000000 !important;
 }
 .site-mobile-menu .site-nav-wrap a:hover {
   color: #136ad5;
