--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2312,3 +2312,75 @@ index html css
 a {
   text-decoration: none;
 }
+/* Tooltip container */
+.tooltip-container {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+/* Tooltip text */
+.tooltip-container .tooltip-text {
+  visibility: hidden;
+  width: 200px;
+  /*Adjustasneeded*/
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 8px;
+  position: absolute;
+  z-index: 1;
+  bottom: 120%;
+  /*Positionabovetheelement*/
+  left: 50%;
+  transform: translateX(-50%);
+  /*opacity: 0;
+  */
+  transition: opacity 0.3s ease;
+  -webkit-transition: opacity 0.3s ease;
+  -moz-transition: opacity 0.3s ease;
+  -ms-transition: opacity 0.3s ease;
+  -o-transition: opacity 0.3s ease;
+}
+
+/* Tooltip arrow */
+.tooltip-container .tooltip-text::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  /* Arrow at the bottom of the tooltip */
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #333 transparent transparent transparent;
+}
+
+/* Show tooltip on hover */
+.tooltip-container:hover .tooltip-text {
+  visibility: visible;
+  color: white;
+  opacity: 1;
+}
+
+.site-mobile-menu-body a {
+  color: black;
+  /* Set link color to black */
+  text-decoration: none;
+  /* Optional: Remove underline */
+}
+
+.site-mobile-menu-body a:hover {
+  color: gray;
+}
+
+/* Example CSS for mobile navigation */
+/* @media (max-width: 768px) {
+  .mobile-nav {
+    display: block;
+  }
+  .desktop-nav {
+    display: none;
+  }
+} */
